<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/menuTop">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_others"
            android:title="@string/nav_newlyadded" />

       <!-- <item
            android:id="@+id/visa_sponsored"
            android:icon="@drawable/ic_recent_actors_black_24dp"
            android:title="@string/nav_visa_sponsored" /> -->

        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/nav_location" />

        <item
            android:id="@+id/nav_recommended"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/nav_recommended" />

        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/nav_today" />

        <item
            android:id="@+id/nav_tomorrow"
            android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
            android:title="@string/nav_tomorrow" />

    </group>

    <group android:checkableBehavior="single" android:id="@+id/menuCenter">

        <item
            android:id="@+id/nav_resume_corner"
            android:icon="@drawable/ic_resume_center_black_24dp"
            android:title="@string/nav_resume" />

        <item
            android:id="@+id/nav_viewedJobs"
            android:icon="@drawable/ic_viewedjobs_black_24dp"
            android:title="@string/nav_viewed" />
        <item
            android:id="@+id/nav_favJobs"
            android:icon="@drawable/ic_favorite_jobs_24dp"
            android:title="@string/nav_favourite" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menuBottom">

        <item
            android:id="@+id/nav_postnewjob"
            android:icon="@drawable/ic_add_to_queue_black_24dp"
            android:title="@string/nav_postnew" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_input_component_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_about_us_24dp"
            android:title="@string/nav_aboutus" />
    </group>

</menu>