<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/textColorWhite"
        android:paddingTop="10dp"
        android:layout_weight="0.02">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.94"
                    android:padding="@dimen/cardTextTitlePadding"
                    android:text="@string/settings_notification"
                    android:textColor="@color/textColorBlack"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notificationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:padding="@dimen/cardTextTitlePadding"
                android:text="You can enable or disable the notifications. We strongly recommend you to enable this option to receive WalkIn interview updates." />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/textColorWhite"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.02">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.94"
                    android:padding="@dimen/cardTextTitlePadding"
                    android:text="@string/settings_vibration"
                    android:textColor="@color/textColorBlack"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/vibrationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:padding="@dimen/cardTextTitlePadding"
                android:text="@string/summary_vibrate"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>